# spotnet

./: .dockerignore  .env  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.windows  Makefile  README.md  Scarb.toml  collect_events.ipynb  collect_events.py  docker-compose.back.yaml  docker-compose.dev-windows.yaml  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  integration-docker-compose.dev.yaml  manual_test_scenarios.md  package-lock.json  package.json  pyproject.toml  requirements.txt  spotnet.conf  zklend_airdrop_proof_research.md
.github/workflows/: cairo_shared_workflow.yml  cairo_tests.yml  cd.yml  ci.yml  frontend_tests.yml  integration-tests.yml  pylint.yml  (+8 more)
devops/: docker-compose.back.yaml  docker-compose.dev-windows.yaml  docker-compose.dev.yaml  docker-compose.margin.back.yml  docker-compose.spotnet.back.yaml  docker-compose.spotnet.dev-windows.yaml  docker-compose.spotnet.dev.yaml
docs/: ProductGuideline.md  contract_deploy.md  spotnet.md
frontend/: .env.dev  .eslintrc.json  .prettierrc  Dockerfile  Dockerfile.dev  README.md  babel.config.js  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vite.config.mjs  vitest.config.js
integration_test/: close_position_test.py  open_position_test.py
integration_tests/: open_position_test.py  test_position_creation.py
lending-form/: package-lock.json  package.json
margin/: .tool-versions  README.md  Scarb.toml  test.sh
margin_app/: .env.dev  .env.example  Dockerfile  README.md  alembic.ini  base.py  docker-compose.yml  entrypoint.sh  pyproject.toml
margin_app/app/: main.py
margin_app/app/alembic/: env.py
margin_app/app/alembic/versions/: 2025-02-22_fix_margin_position_status.py  2025-03-05_.py  2025-03-05_added_lazy_selection_for_user_and_.py  2025-03-21_changed_table_order_to_user_order.py  2025-03-22_add_admin_model.py  2025-03-28_add_nullable_to_password.py  2025-03-29_.py  2025-03-29_add_transaction_model.py  9c0b65042abd_init.py  9cf106d80ed0_init.py  d23e53e374ba_remove_token_from_user_pool.py  ec8fbaba3c97_add_risk_status.py
margin_app/app/api/: admin.py  auth.py  common.py  deposit.py  fix_endpoints.py  liquidation.py  margin_position.py  order.py  pools.py  user.py
margin_app/app/auth/: base.py
margin_app/app/core/: config.py
margin_app/app/crud/: admin.py  base.py  deposit.py  liquidation.py  margin_position.py  order.py  pool.py  user.py
margin_app/app/db/: seed_data.py  sessions.py
margin_app/app/models/: __init__.py  admin.py  base.py  deposit.py  liquidation.py  margin_position.py  order.py  pool.py  user.py
margin_app/app/schemas/: admin.py  auth.py  base.py  deposit.py  liquidation.py  margin_position.py  order.py  pools.py  user.py
margin_app/app/services/: auth.py  emails.py
margin_app/app/services/auth/: security.py
margin_app/app/tests/: conftest.py  deposit_crud.py  liquidation.py  margin_position_crud.py  test_admin_model.py  test_auth_admin_user_middleware.py  test_auth_service.py  test_base.py  test_crud_user.py  test_db_connector.py  test_liquidation_crud.py  test_margin_position_crud.py  test_order_crud.py  test_pools_crud.py  test_user_crud.py
margin_app/app/tests/api/: deposit.py  liquidation.py  margin_position.py  order.py  pool.py  test_admin_api.py  test_deposit_api.py  test_liquidation_api.py  test_margin_position_api.py  test_order.py  test_pool_api.py  test_user_api.py  user.py
margin_app/app/tests/services/: test_auth_services.py
margin_app/app/utils/: constants.py
margin_app/auth/: security.py
margin_app/scripts/: entrypoint_dev.sh
margin_frontend/: README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
models/: deposit.py
nginx/: Dockerfile  default.conf
research/: avnu_integration_research.py  manual_test_scenarios.md  zkLend_liquidation_research.md  zklend_liquidation_position.py
scripts/: migrate.sh
spotnet/: .env.dev  Dockerfile  Dockerfile.windows  docker-compose.yaml  entrypoint.sh  package.json
spotnet_tracker/: celery_config.py  tasks.py
src/: constants.cairo  core.cairo  deposit.cairo  interfaces.cairo  lib.cairo  swap.cairo  types.cairo  vault.cairo
tests/: constants.cairo  interfaces.cairo  lib.cairo  test_airdrop.cairo  test_defispring.cairo  test_loop.cairo  test_swap.cairo  test_vault.cairo  types.cairo  utils.cairo
web_app/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  test.db
(+1068 files in other folders)
