[tool.poetry]
name = "spotnet"
version = "0.1.0"
description = ""
authors = ["iamnovichek <rungotika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
fastapi = "^0.115.0"
black = "^24.8.0"
isort = "^5.13.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
starknet-py = "^0.24.2"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
