[tool.poetry]
name = "spotnet"
version = "0.1.0"
description = "The functionality allows users to leverage their positions on assets (e.g., ETH) by looping through lending protocols (ZkLend) and automated market makers (AMMs)."
authors = ["djeck1432 <jack_horobets@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.115.0"
black = "24.8.0"
isort = "5.13.2"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.1"
uvicorn = "0.30.6"
starknet-py = "0.24.2"
jinja2 = "3.1.4"
python-multipart = "0.0.9"
itsdangerous = "2.2.0"
alembic = "1.13.3"
sqlalchemy = "2.0.35"
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-env = "1.1.5"
pytest-mock = "3.14.0"
httpx = "0.27.2"
celery = "5.4.0"
redis = "5.2.0"
trio = "0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
